--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,17 @@
         "psr-4": {
             "Torzer\\Common\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "classmap": [
+            "tests"
+        ]
+    },
+    "require": {
+        "php": ">=5.4.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit" : "5.*",
+        "laravel/laravel": "5.*"
     }
 }
